- Added role icons to GUI